--- a/app/src/main/res/layout/card_tasarim.xml
+++ b/app/src/main/res/layout/card_tasarim.xml
@@ -8,53 +8,58 @@
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/satirCard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp">
+            android:layout_width="170dp"
+            android:layout_height="200dp"
+            android:layout_margin="5dp"
+            android:background="@color/byz"
+            app:cardCornerRadius="20dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/byz"
+                android:padding="5sp">
 
                 <ImageView
                     android:id="@+id/imageViewYemekResim"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewYemekAd"
                     app:srcCompat="@drawable/ayran" />
 
                 <TextView
                     android:id="@+id/textViewYemekAd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="Kola"
-                    android:textColor="#4E4E4E"
-                    android:textSize="24sp"
+                    android:layout_marginTop="8dp"
+                    android:text="Ayran"
+                    android:textColor="@color/syh"
+                    android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageViewYemekResim" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/textViewYemekFiyat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Bedava"
-                    android:textColor="#424242"
-                    android:textSize="20sp"
+                    android:layout_marginTop="16dp"
+                    android:text="5 ₺"
+                    android:textColor="@color/syh"
+                    android:textSize="14sp"
                     android:textStyle="bold|italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewYemekAd" />
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewYemekResim" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
