--- a/app/src/main/res/layout/fragment_yemek_detay.xml
+++ b/app/src/main/res/layout/fragment_yemek_detay.xml
@@ -11,19 +11,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/syh"
         tools:context=".ui.fragment.YemekDetayFragment">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarDetay"
-            app:title="@{yemekDetayToolbarBaslik}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
+            android:background="@color/arkpln"
+            android:minHeight="40dp"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@{yemekDetayToolbarBaslik}"
+            app:titleTextColor="@color/byz" />
 
         <ImageView
             android:id="@+id/imageViewDetayResim"
@@ -42,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Icerik"
-            android:textColor="#000000"
+            android:textColor="@color/sr"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="TextView"
-            android:textColor="#000000"
+            android:textColor="@color/sr"
             android:textSize="20sp"
             android:textStyle="bold|italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -69,8 +71,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:backgroundTint="@color/krmz"
             android:text="-"
-            android:textSize="24sp"
+            android:textColor="@color/byz"
+            android:textSize="28sp"
             app:layout_constraintEnd_toStartOf="@+id/textViewDetaySayi"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,9 +84,9 @@
             android:id="@+id/textViewDetaySayi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="16dp"
             android:text="0"
-            android:textColor="#000000"
+            android:textColor="@color/sr"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/buttonAzalt"
@@ -94,8 +98,11 @@
             android:id="@+id/buttonArttır"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/krmz"
+            android:shadowColor="#FFFFFF"
             android:text="+"
-            android:textSize="24sp"
+            android:textColor="@color/byz"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/textViewDetaySayi"
@@ -105,8 +112,11 @@
             android:id="@+id/buttonSepeteEkle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="48dp"
+            android:backgroundTint="@color/krmz"
             android:text="Sepete Ekle"
+            android:textColor="@color/byz"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewDetaySayi" />
@@ -117,8 +127,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="57dp"
             android:layout_marginBottom="43dp"
+            android:background="@color/syh"
+            android:backgroundTint="@color/syh"
             android:text="TextView"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/syh"
             android:textSize="1sp"
             app:layout_constraintBottom_toTopOf="@+id/buttonAzalt"
             app:layout_constraintStart_toStartOf="parent" />
