--- a/app/src/main/res/layout/fragment_yemekleri_listeleme.xml
+++ b/app/src/main/res/layout/fragment_yemekleri_listeleme.xml
@@ -12,31 +12,33 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/syh"
         tools:context=".ui.fragment.YemekleriListelemeFragment">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarYemekListe"
-            app:title="@{yemekListelemeToolbarBaslik}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="@color/arkpln"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
+            app:layout_constraintBottom_toTopOf="@+id/rv"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@{yemekListelemeToolbarBaslik}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-            app:spanCount="1"
-            android:orientation="vertical"
-            android:adapter="@{yemeklerAdapter}"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:adapter="@{yemeklerAdapter}"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarYemekListe" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbarYemekListe"
+            app:spanCount="2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
