--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/main_activity_nav" />
+        app:navGraph="@navigation/main_activity_nav"
+        tools:layout_editor_absoluteX="-206dp"
+        tools:layout_editor_absoluteY="-65dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
