--- a/app/src/main/res/layout/card_tasarim_sepet.xml
+++ b/app/src/main/res/layout/card_tasarim_sepet.xml
@@ -2,10 +2,14 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="5sp">
 
     <data>
-        <variable name="sepetNesnesi" type="com.example.proje.data.entity.SepetYemekler" />
+
+        <variable
+            name="sepetNesnesi"
+            type="com.example.proje.data.entity.SepetYemekler" />
     </data>
 
     <LinearLayout
@@ -13,12 +17,16 @@
         android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewSepet"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="#D9E1FF"
+            app:cardCornerRadius="50dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/sr">
 
                 <ImageView
                     android:id="@+id/imageViewSepetResim"
@@ -83,13 +91,13 @@
                     android:id="@+id/textViewSepetFiyat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="80dp"
                     android:layout_marginTop="32dp"
+                    android:layout_marginEnd="32dp"
                     android:text="5"
                     android:textColor="#000000"
                     android:textSize="10sp"
                     android:textStyle="italic"
-                    app:layout_constraintStart_toEndOf="@+id/textViewSepetAd"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView3"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
