--- a/app/src/main/res/layout/fragment_sepet_goruntuleme.xml
+++ b/app/src/main/res/layout/fragment_sepet_goruntuleme.xml
@@ -13,32 +13,44 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/syh"
         tools:context=".ui.fragment.SepetGoruntulemeFragment">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbarSepet"
-            app:title="@{sepetToolbarBaslik}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
+            android:background="@color/arkpln"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:title="@{sepetToolbarBaslik}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv2"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:adapter="@{sepetAdapter}"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbarSepet"
-            app:spanCount="1" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbarSepet" />
+
+        <TextView
+            android:id="@+id/textViewSepetTutar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            android:textColor="#EFEFEF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/toolbarSepet"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
