--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#FFB3B3B3</color>
+    <color name="krmz">#FF724C</color>
+    <color name="sr">#E6B915</color>
+    <color name="byz">#F4F4F8</color>
+    <color name="syh">#2A2C41</color>
+    <color name="arkpln">#4A4D70</color>
+
 </resources>
